--- a/mtv.html
+++ b/mtv.html
@@ -8,7 +8,7 @@
   <body>
     <img  class="mtvlogo2" src="https://media.giphy.com/media/K4ppHUZTYKJYk/giphy.gif" alt="">
     <h1 class="title" ><strong>History of MTV</strong></h1>
-    <hr class="">
+    <hr class="line">
     <h3 class="history" >On Saturday, August 1st, 1981, at 12:01am Eastern Time, MTV was officially launched. The first words spoken were, "Ladies and Gentlemen, Rock and Roll!" This was spoken by John Lack and was played over footage of the actual space shuttle launch countdown of Columbia and Apollo 11. MTV originally wanted to use Neil Armstrong's "One Small Step" quote but he refused to allow them to use it. The first music video that ever played on MTV was The Buggles' "Video Killed the Radio Star". After that, the next video to follow was Pat Benatars' "You Better Run". MTV's effect was immediate in the areas where the channel was carried. MTV's audience was most popular among the 12 - 24 year olds. A study showed that the average person that age, would watch MTV on an average of 30 minutes up to 2 hours per day.</h3>
     <img  class="original5" src="images/og-mtv.jpg" alt="">
     <h3 class="history" >The original purpose of MTV was to be "music television", playing music videos 24/7, guided by on-air personalities known as VJs, or video jockeys. The original slogans of the channel were "You'll never look at music the same way again", and "On cable. In stereo."
