--- a/vj.html
+++ b/vj.html
@@ -10,14 +10,14 @@
 <body>
   <div class="title">
     <img class="title-logo" src="https://media.giphy.com/media/h8rMHYI7TKNEHxhp1p/giphy.gif" alt="">
-    <hr>
+    <hr class="line" >
   </div>
   <div class="top">
     <h1>Lets take a look at all of the MTV Video Jockeys (VJ's)</h1>
     <h1>From Riki Rachtman to Daisy Fuentes</h1>
   </div>
-  <div class="">
-    <img class="daisy" src="https://hosting.photobucket.com/images/o179/rck211/daisy_before.jpeg?width=450&height=278&fit=bounds&crop=fill" alt="">
+  <div class="block">
+    <a href="daisyf.html"><img class="daisy" src="https://hosting.photobucket.com/images/o179/rck211/daisy_before.jpeg?width=450&height=278&fit=bounds&crop=fill" alt=""></a>
     <img class="bill" src="https://hosting.photobucket.com/images/o179/rck211/bill_pic.jpg?width=450&height=278&fit=bounds&crop=fill" alt="">
     <img class="carson" src="https://hosting.photobucket.com/images/o179/rck211/carson.jpg?width=450&height=278&fit=bounds&crop=fill" alt="">
     <img  class="riki" src="https://hosting.photobucket.com/images/o179/rck211/riki.jpg?width=450&height=278&fit=bounds&crop=fill" alt="">
